[package]
name = "clarify-link"
description = "Clarify obfuscated hyperlinks"
version = "0.9.3"
authors = ["Martin Bley <dev@mb-oss.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1"

